# internal/models.go
@@ -7,12 +7,15 @@ type User struct {
 	Name string `json:"name,omitempty"`
 }
 type Segment struct {
-	Id   int       `json:"id,omitempty"`
-	Name string    `json:"name,omitempty"`
-	TTL  time.Time `json:"ttl,omitempty"`
+	Id   int    `json:"id,omitempty"`
+	Name string `json:"name,omitempty"`
+}
+type UserSegment struct {
+	Segment `json:"segment"`
+	TTL     time.Time `json:"ttl,omitempty"`
 }
 type UpdateRequest struct {
-	UserId      int       `json:"user_id,omitempty"`
-	SegmentsAdd []Segment `json:"segments_add,omitempty"`
-	SegmentsDel []Segment `json:"segments_del,omitempty"`
+	UserId      int           `json:"user_id,omitempty"`
+	SegmentsAdd []UserSegment `json:"segments_add,omitempty"`
+	SegmentsDel []UserSegment `json:"segments_del,omitempty"`
 }
